<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_percent_category"
        android:title="@string/percent_category_title">
        <CheckBoxPreference
            android:key="pref_remember_percent"
            android:defaultFocusHighlightEnabled="true"
            android:summary="@string/remember_percent_summary"
            android:title="@string/remember_percent_title"
            android:defaultValue="true"
            />

        <ListPreference
            android:key="pref_rounding"
            android:defaultValue="@string/rounding_default"
            android:dependency="pref_remember_percent"
            android:dialogTitle="@string/rounding_title"
            android:entries="@array/entry_key"
            android:entryValues="@array/entry_values"
            android:summary="@string/rounding_summary"
            android:title="@string/rounding_title" />

    </PreferenceCategory>

   <!-- <PreferenceCategory
        android:key="pref_percent_category"
        android:title="@string/percent_category_title">
        <CheckBoxPreference
            android:defaultFocusHighlightEnabled="true"
            android:key="pref_forget_percent"
            android:summary="@string/remember_percent_summary"
            android:title="@string/remember_percent_title"
            android:defaultValue="false"/>

        <ListPreference
            android:defaultValue="@string/rounding_default"
            android:dependency="pref_forget_percent"
            android:dialogTitle="@string/rounding_title"
            android:entries="@array/entry_key"
            android:entryValues="@array/entry_values"
            android:key="pref_default_percent"
            android:summary="@string/rounding_summary"
            android:title="@string/rounding_title" />

    </PreferenceCategory>-->


</PreferenceScreen>